# boxer

./: README.md
box/: Cargo.toml  Dockerfile  README.md
box/demo_src/: my_app.py  my_app.rb
box/examples/python/: Dockerfile
box/examples/ruby/: Dockerfile
box/ruby-3.2-wasm32-unknown-wasi-full/usr/local/include/ruby-3.2.0/wasm32-wasi/ruby/: config.h
box/ruby-3.2-wasm32-unknown-wasi-full/usr/local/lib/pkgconfig/: ruby-3.2.pc
box/ruby-3.2-wasm32-unknown-wasi-full/usr/local/lib/ruby/3.2.0/wasm32-wasi/: rbconfig.rb
box/ruby-3.2-wasm32-unknown-wasi-full/usr/local/lib/ruby/gems/3.2.0/cache/: net-ftp-0.2.1.gem
box/ruby-3.2-wasm32-unknown-wasi-full/usr/local/lib/ruby/gems/3.2.0/specifications/: debug-1.7.1.gemspec  matrix-0.4.2.gemspec  minitest-5.16.3.gemspec  (+8 more)
box/ruby-3.2-wasm32-unknown-wasi-full/usr/local/share/man/man1/: ruby.1
box/src/: main.rs
box/src/builder/: builder.rs  packer.rs
box/src/host/server/: box_host.c  box_host.rs
box/src/host/web/: box_host.html  host_functions.js
box/tests/: wbx_tests.rs
wbx/: .gitignore  Cargo.toml  README.md
wbx/demo_src/: my_app.py  my_app.rb
wbx/head-wasm32-unknown-wasi-full/usr/local/include/ruby-3.2.0+1/wasm32-wasi/ruby/: config.h
wbx/head-wasm32-unknown-wasi-full/usr/local/lib/pkgconfig/: ruby-3.2.pc
wbx/head-wasm32-unknown-wasi-full/usr/local/lib/ruby/3.2.0+1/wasm32-wasi/: rbconfig.rb
wbx/head-wasm32-unknown-wasi-full/usr/local/share/man/man1/: irb.1  ruby.1
wbx/ruby-3.2-wasm32-unknown-wasi-full/usr/local/share/man/man1/: irb.1
wbx/src/: main.rs
wbx/src/builder/: builder.rs  packer.rs
(+165 files in other folders)
