[package]
name = "box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
dockerfile-parser = "0.8.0"
wasm-encoder = "0.38.1"
wasmparser = "0.106.0"
wizer = "4.0.0"
wasmtime = "17.0.0"
wasmtime-wasi = "16.0.0" # pinned at 16 bc of trans dep on wasi-common for wizer
structopt = "0.3.26"
clap = "2.33"
