[package]
name = "wbx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.16.2"
assert_fs = "1.0"
reqwest = { version = "0.11.10", features = ["blocking"]}
wasmtime = "0.37.0"
